--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam,
       incidunt.
+      Hello
     </p>
     <script src="js/script.js"></script>
   </body>
